[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/B612Mono-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD_V1.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="HUD_V1" type="Control"]
modulate = Color( 0, 1, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0
size_flags_horizontal = 8
size_flags_vertical = 8
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="Data" type="GridContainer" parent="."]
anchor_top = 0.85
anchor_right = 0.2
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
size_flags_vertical = 8
columns = 2

[node name="Label_Hull" type="Label" parent="Data"]
margin_right = 52.0
margin_bottom = 25.0
size_flags_horizontal = 0
text = "HULL"
uppercase = true

[node name="ProgressBar_Hull" type="ProgressBar" parent="Data"]
margin_left = 56.0
margin_right = 202.0
margin_bottom = 25.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0

[node name="Label_Shield" type="Label" parent="Data"]
margin_top = 29.0
margin_right = 52.0
margin_bottom = 54.0
size_flags_horizontal = 0
text = "SHLD"
uppercase = true

[node name="ProgressBar_Shield" type="ProgressBar" parent="Data"]
margin_left = 56.0
margin_top = 29.0
margin_right = 202.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0

[node name="Label_Throttle" type="Label" parent="Data"]
margin_top = 58.0
margin_right = 39.0
margin_bottom = 83.0
size_flags_horizontal = 0
text = "THR"
uppercase = true

[node name="ProgressBar_Throttle" type="ProgressBar" parent="Data"]
margin_left = 56.0
margin_top = 58.0
margin_right = 202.0
margin_bottom = 83.0
size_flags_horizontal = 3
size_flags_vertical = 1
value = 50.0
